--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -1,52 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/home_item_id"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="2dp"
     android:background="@drawable/bg_list_subject_item"
-    android:layout_marginRight="10dp"
-    android:layout_marginLeft="10dp"
     android:padding="5dp">
-        <ImageView
-            android:id="@+id/img_subject"
-            android:src="@drawable/ic_school_black_24dp"
-            android:background="@drawable/circlebackgroundgreen"
-            android:layout_width="60dp"
-            android:layout_height="60dp" />
-        <LinearLayout
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="8dp"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/img_subject"
+        android:src="@drawable/ic_school_black_24dp"
+        android:layout_width="56dp"
+        android:layout_height="56dp" />
+    <LinearLayout
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/txt_subject_name"
-                android:textColor="@color/colorPrimary1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tên môn học"
-                android:textSize="18sp" />
-            <TextView
-                android:id="@+id/txt_subject_id"
-                android:textColor="#bebebe"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Mô tả môn học"
-                android:textSize="12sp" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/txt_subject_name"
+            android:textColor="@color/colorPrimary1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tên môn học"
+            android:textSize="16sp" />
+        <TextView
+            android:id="@+id/txt_subject_id"
+            android:textColor="#000000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mô tả môn học"
+            android:textSize="12sp" />
+    </LinearLayout>
     <LinearLayout
         android:gravity="end"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
             android:id="@+id/img_subject_menu"
-            android:src="@drawable/ic_menu_black_24dp"
-            android:background="@drawable/circlebackgroundgreen"
-            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_expand_more_black_24dp"
+            android:layout_marginRight="15dp"
             android:layout_gravity="center_vertical"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_width="20dp"
+            android:layout_height="20dp" />
     </LinearLayout>
 </LinearLayout>
