--- a/app/src/main/res/layout/fragment_schedual.xml
+++ b/app/src/main/res/layout/fragment_schedual.xml
@@ -1,14 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".fragment.SchedualFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:layout_marginTop="0dp"
+        android:background="@color/materialGreen"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Schedual fragment" />
-
-</FrameLayout>
+        android:orientation="vertical"
+        android:layout_height="190dp">
+        <TextView
+            android:layout_marginTop="18dp"
+            android:textSize="32sp"
+            android:textColor="@android:color/white"
+            android:text="Mục tiêu của tôi"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+    <Button
+        android:id="@+id/txt_create_goal"
+        android:layout_marginTop="-30dp"
+        android:textSize="19dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tạo mục tiêu mới"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:textStyle="bold"
+        android:background="@drawable/btn_primary"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/schedual_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+</LinearLayout>
