--- a/app/src/main/res/layout/fragment_schedual.xml
+++ b/app/src/main/res/layout/fragment_schedual.xml
@@ -9,7 +9,7 @@
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_marginTop="0dp"
-        android:background="@color/materialGreen"
+        android:background="@color/startBlue"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="190dp">
@@ -17,7 +17,7 @@
             android:layout_marginTop="18dp"
             android:textSize="32sp"
             android:textColor="@android:color/white"
-            android:text="Mục tiêu của tôi"
+            android:text="Mục tiêu"
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -25,15 +25,12 @@
     <Button
         android:id="@+id/txt_create_goal"
         android:layout_marginTop="-30dp"
-        android:textSize="19dp"
-        android:layout_gravity="center_horizontal"
+        android:textSize="18dp"
+        android:layout_gravity="end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tạo mục tiêu mới"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:text="+"
+        android:layout_marginRight="15dp"
         android:textStyle="bold"
         android:background="@drawable/btn_primary"
         android:textAlignment="center"
