--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -8,15 +8,15 @@
     android:layout_marginBottom="5dp"
     android:layout_marginTop="2dp"
     android:background="@drawable/bg_list_subject_item"
-    android:padding="5dp">
+    android:padding="10dp">
     <ImageView
         android:id="@+id/img_subject"
         android:src="@drawable/ic_school_black_24dp"
-        android:layout_width="56dp"
-        android:layout_height="56dp" />
+        android:layout_width="24dp"
+        android:layout_height="24dp" />
     <LinearLayout
         android:layout_marginLeft="12dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="2dp"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
@@ -27,13 +27,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tên môn học"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
         <TextView
             android:id="@+id/txt_subject_id"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mô tả môn học"
+            android:text="ID"
             android:textSize="12sp" />
     </LinearLayout>
     <LinearLayout
