--- a/app/src/main/res/layout/layout_user_info.xml
+++ b/app/src/main/res/layout/layout_user_info.xml
@@ -30,7 +30,7 @@
             android:textStyle="bold" />
     </LinearLayout>
     <android.support.v7.widget.CardView
-        android:layout_width="300dp"
+        android:layout_width="350dp"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="285dp"
@@ -50,7 +50,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Best score"
+                    android:text="Điểm số"
                     android:textSize="18sp"/>
                 <TextView
                     android:layout_width="wrap_content"
