--- a/app/src/main/res/layout/schedual_content.xml
+++ b/app/src/main/res/layout/schedual_content.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <View
-        android:layout_width="8dp"
+        android:layout_width="6dp"
         android:layout_height="match_parent"
         android:background="@color/startBlue"
         />
@@ -25,16 +25,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textColor="@color/colorPrimary1"
-            android:text="23/05/1997"/>
+            android:text="23-05-1997"/>
         <TextView
             android:layout_gravity="center"
             android:id="@+id/txtNote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/profilePrimaryDark"
-            android:textSize="15dp"
+            android:textSize="12dp"
             android:text="Học android"/>
     </LinearLayout>
 </LinearLayout>
