--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/txt_subject_name"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@android:color/white"
@@ -28,6 +29,7 @@
             android:layout_height="wrap_content"
             android:text="Môn học: Không biết"/>
         <TextView
+            android:id="@+id/txt_subject_id"
             android:layout_marginTop="10dp"
             android:textSize="16sp"
             android:textColor="@android:color/white"
@@ -35,14 +37,16 @@
             android:layout_height="wrap_content"
             android:text="Mã môn học: int001"/>
         <TextView
+            android:id="@+id/txt_num_questions"
             android:layout_marginTop="5dp"
             android:textSize="16sp"
             android:textColor="@android:color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Số lượng câu hỏi: 0"
+            android:text="Số lượng câu hỏi: "
             />
         <TextView
+            android:id="@+id/txt_time_quizz"
             android:layout_marginTop="5dp"
             android:textSize="16sp"
             android:textColor="@android:color/white"
@@ -50,6 +54,7 @@
             android:layout_height="wrap_content"
             android:text="Thời gian: 0s"/>
         <Button
+            android:id="@+id/btn_play"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
             android:padding="15dp"
