--- a/app/src/main/res/layout/activity_quizz.xml
+++ b/app/src/main/res/layout/activity_quizz.xml
@@ -27,6 +27,7 @@
         android:src="@drawable/wrong_answer"
         />
     <TextView
+        android:id="@+id/txt_answer"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/img_answer"
         android:layout_width="wrap_content"
@@ -39,14 +40,15 @@
         android:id="@+id/ll_questions"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical"
         android:background="@drawable/bg_quizz"
         android:padding="12dp">
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/txt_question"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textSize="12sp"
@@ -59,6 +61,7 @@
             android:background="@color/timelineDarkGrey"
             />
         <TextView
+            android:id="@+id/txt_option1"
             android:layout_marginLeft="5dp"
             android:background="@android:color/white"
             android:textAlignment="center"
@@ -71,6 +74,7 @@
             android:layout_height="wrap_content"
             android:text="Đây là option 1"/>'
         <TextView
+            android:id="@+id/txt_option2"
             android:layout_marginLeft="5dp"
             android:background="@android:color/white"
             android:textAlignment="center"
@@ -84,6 +88,7 @@
             android:text="Đây là option 2"/>
 
         <TextView
+            android:id="@+id/txt_option3"
             android:layout_marginLeft="5dp"
             android:background="@android:color/white"
             android:textAlignment="center"
@@ -97,6 +102,7 @@
             android:text="Đây là option 3"/>
 
         <TextView
+            android:id="@+id/txt_option4"
             android:background="@android:color/white"
             android:textAlignment="center"
             android:paddingTop="5dp"
@@ -108,6 +114,7 @@
             android:text="Đây là option 4"/>
     </LinearLayout>
     <ProgressBar
+        android:id="@+id/pb_timeCountDown"
         android:layout_centerInParent="true"
         android:layout_marginBottom="60dp"
         android:layout_alignParentBottom="true"
