--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:hint="Email"
         android:textColorHint="#ffffff"
-        android:layout_marginBottom="180dp"
+        android:layout_marginBottom="250dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="#55000000"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:textColorHint="#ffffff"
-        android:layout_marginBottom="120dp"
+        android:layout_marginBottom="190dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="#55000000"
@@ -46,13 +46,23 @@
         android:textColor="@android:color/white"
         android:inputType="textPassword"
         />
+    <RadioButton
+        android:id="@+id/rbutton_remember"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="145dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nhớ mật khẩu"
+        android:textColor="@android:color/white"/>
     <Button
         android:id="@+id/btnLogin_Login"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="70dp"
         android:text="Đăng nhập"
         android:textColor="@android:color/white"
         android:background="@drawable/gradient_1"
@@ -65,11 +75,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="61dp"
         android:fontFamily="@font/billabong"
         android:text="Đăng ký"
         android:textStyle="italic"
         android:textColor="@android:color/white"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="25dp"
         android:textSize="15sp" />
 </RelativeLayout>
