--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -12,8 +12,8 @@
     <ImageView
         android:id="@+id/img_subject"
         android:src="@drawable/ic_school_black_24dp"
-        android:layout_width="24dp"
-        android:layout_height="24dp" />
+        android:layout_width="36dp"
+        android:layout_height="36dp" />
     <LinearLayout
         android:layout_marginLeft="12dp"
         android:layout_marginTop="2dp"
@@ -30,22 +30,10 @@
             android:textSize="14sp" />
         <TextView
             android:id="@+id/txt_subject_id"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/colorPrimary1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ID"
             android:textSize="12sp" />
-    </LinearLayout>
-    <LinearLayout
-        android:gravity="end"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ImageView
-            android:id="@+id/img_subject_menu"
-            android:src="@drawable/ic_expand_more_black_24dp"
-            android:layout_marginRight="15dp"
-            android:layout_gravity="center_vertical"
-            android:layout_width="20dp"
-            android:layout_height="20dp" />
     </LinearLayout>
 </LinearLayout>
