Completed upload photo

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,13 @@
         android:text="Đăng nhập"
         android:textColor="@android:color/white"
         android:textSize="36sp" />
+    <ImageView
+        android:layout_marginBottom="50dp"
+        android:src="@drawable/login"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/txtLogin_Email"/>
     <EditText
         android:id="@+id/txtLogin_Email"
         android:layout_width="300dp"
