--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,12 +11,12 @@
             android:background="@drawable/profile_gradient_background"
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_height="150dp">
+            android:layout_height="400dp">
 
             <ImageView
                 android:id="@+id/img_userAvatar"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:layout_marginTop="30dp"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/ic_person_outline_black_24dp" />
@@ -30,70 +30,6 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
-        <android.support.v7.widget.CardView
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="130dp"
-            android:background="@android:color/white">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:orientation="horizontal"
-                android:weightSum="3">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:layout_height="match_parent">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Điểm số"
-                        android:textSize="14sp"/>
-                    <TextView
-                        android:id="@+id/txtScore"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="0"
-                        android:textColor="@color/startBlue"
-                        android:textSize="20sp"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:layout_height="match_parent">
-                    <View
-                        android:layout_width="2dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/lightGrayLine"
-                        android:layout_margin="5dp"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:layout_height="match_parent">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Môn đã học"
-                        android:textSize="14sp"/>
-                    <TextView
-                        android:id="@+id/txt_LearnedSubjects"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="0"
-                        android:textColor="@color/startBlue"
-                        android:textSize="20sp"/>
-                </LinearLayout>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -106,8 +42,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:src="@drawable/ic_call_black_24dp"
                 android:background="@color/startBlue"/>
 
@@ -121,13 +57,13 @@
                 android:textSize="14sp"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="40dp"
             android:paddingLeft="25dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:src="@drawable/ic_school_black_24dp"
                 android:background="@color/startBlue"/>
 
@@ -141,13 +77,13 @@
                 android:textSize="14sp" />
         </LinearLayout>
         <LinearLayout
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="40dp"
             android:paddingLeft="25dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:src="@drawable/ic_email_black_24dp"
                 android:background="@color/startBlue"/>
 
@@ -164,38 +100,38 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:weightSum="6"
+        android:layout_marginTop="50dp"
         android:orientation="horizontal">
         <Button
-            android:layout_weight="3"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="25dp"
             android:id="@+id/btn_editprofile"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sửa thông tin"
-            android:layout_gravity="center_horizontal"
+            android:textSize="12sp"
             android:background="@drawable/btn_primary"
-            android:padding="8dp"
+            android:padding="10dp"
             />
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_width="50dp"
             android:orientation="vertical"
+            android:layout_gravity="center_horizontal"
             android:layout_height="match_parent">
             <View
                 android:layout_width="2dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_height="match_parent"
                 android:background="@color/lightGrayLine"
                 android:layout_margin="5dp"/>
         </LinearLayout>
         <Button
-            android:layout_weight="2"
-            android:layout_width="0dp"
+            android:layout_marginLeft="20dp"
+            android:id="@+id/btn_signout"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Đăng xuất"
-            android:layout_gravity="center_horizontal"
+            android:textSize="12sp"
             android:background="@drawable/btn_alert"
             android:padding="8dp"
             />
