--- a/app/src/main/res/layout/fragment_schedual.xml
+++ b/app/src/main/res/layout/fragment_schedual.xml
@@ -12,29 +12,33 @@
         android:background="@color/startBlue"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_height="190dp">
+        android:padding="50dp"
+        android:layout_height="wrap_content">
         <TextView
-            android:layout_marginTop="18dp"
             android:textSize="32sp"
             android:textColor="@android:color/white"
-            android:text="Mục tiêu"
+            android:text="Nhiệm vụ"
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
-    <Button
+    <TextView
         android:id="@+id/txt_create_goal"
-        android:layout_marginTop="-30dp"
+        android:layout_marginTop="-28dp"
         android:textSize="18dp"
         android:layout_gravity="end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+"
-        android:layout_marginRight="15dp"
+        android:paddingTop="18dp"
+        android:paddingBottom="18dp"
+        android:paddingRight="25dp"
+        android:paddingLeft="25dp"
+        android:layout_marginRight="20dp"
         android:textStyle="bold"
-        android:background="@drawable/btn_primary"
         android:textAlignment="center"
-        android:textColor="@android:color/white"/>
+        android:textColor="@color/startBlue"
+        android:background="@drawable/btn_circle_white"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/schedual_recyclerview"
         android:layout_width="match_parent"
