--- a/app/src/main/res/layout/schedual_content.xml
+++ b/app/src/main/res/layout/schedual_content.xml
@@ -3,7 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginBottom="12dp"
     android:orientation="horizontal"
+    android:weightSum="15"
+    android:background="@drawable/bg_list_subject_item"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <View
         android:layout_width="6dp"
@@ -11,8 +14,8 @@
         android:background="@color/startBlue"
         />
     <LinearLayout
-
-        android:layout_width="match_parent"
+        android:layout_weight="10"
+        android:layout_width="0dp"
         android:orientation="vertical"
         android:background="@drawable/bg_list_subject_item"
         android:paddingTop="10dp"
@@ -20,21 +23,36 @@
         android:paddingLeft="10dp"
         android:layout_height="wrap_content">
         <TextView
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:id="@+id/txtDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textSize="16sp"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/colorPrimary1"
-            android:text="23-05-1997"/>
+            android:text="14:23 23-05-1997"/>
         <TextView
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:id="@+id/txtNote"
+            android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/profilePrimaryDark"
             android:textSize="12dp"
             android:text="Học android"/>
     </LinearLayout>
+    <ImageView
+        android:layout_weight="2"
+        android:layout_width="0dp"
+        android:layout_height="28dp"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_failed_black_24dp"/>
+    <ImageView
+        android:layout_marginRight="-15dp"
+        android:layout_weight="2"
+        android:layout_width="0dp"
+        android:layout_height="28dp"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_edit_black_24dp"/>
 </LinearLayout>
