--- a/app/src/main/res/layout/activity_date_time_picker.xml
+++ b/app/src/main/res/layout/activity_date_time_picker.xml
@@ -6,12 +6,69 @@
     android:layout_height="match_parent"
     tools:context=".DateTimePicker">
         <TextView
-            android:id="@+id/txt_display_date"
+            android:id="@+id/txt_title"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="50dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_centerInParent="true"
-            android:text="Select date"
-            android:textColor="@color/startBlue"
-            android:textStyle="bold"/>
+            android:text="Thêm một mục tiêu mới"
+            android:textSize="24sp"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/colorPrimary1"
+            />
+        <EditText
+            android:padding="10dp"
+            android:id="@+id/edt_note"
+            android:layout_marginTop="100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:hint="Nội dung mục tiêu"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp"
+            android:layout_below="@id/txt_title"
+            android:layout_centerHorizontal="true"
+            />
+        <EditText
+            android:textStyle="bold"
+            android:paddingTop="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="10dp"
+            android:id="@+id/edt_time"
+            android:layout_below="@id/edt_note"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:hint="Chọn thời gian"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp"
+            android:editable="false"
+            android:layout_marginTop="20dp"/>
+        <Button
+            android:id="@+id/btn_add"
+            android:layout_below="@id/edt_time"
+            android:layout_marginTop="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Thêm mục tiêu"
+            android:layout_centerHorizontal="true"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:background="@drawable/btn_primary"/>
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_below="@id/btn_add"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Huỷ bỏ"
+            android:layout_centerHorizontal="true"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:background="@drawable/btn_alert"/>
 </RelativeLayout>
