--- a/app/src/main/res/layout/fragment_schedual.xml
+++ b/app/src/main/res/layout/fragment_schedual.xml
@@ -22,23 +22,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
+
     <TextView
         android:id="@+id/txt_create_goal"
-        android:layout_marginTop="-28dp"
-        android:textSize="18dp"
-        android:layout_gravity="end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+"
-        android:paddingTop="18dp"
-        android:paddingBottom="18dp"
-        android:paddingRight="25dp"
-        android:paddingLeft="25dp"
+        android:layout_gravity="end"
+        android:layout_marginTop="-28dp"
         android:layout_marginRight="20dp"
-        android:textStyle="bold"
+        android:background="@drawable/btn_circle_white"
+        android:paddingLeft="25dp"
+        android:paddingTop="18dp"
+        android:paddingRight="25dp"
+        android:paddingBottom="18dp"
+        android:text="+"
         android:textAlignment="center"
         android:textColor="@color/startBlue"
-        android:background="@drawable/btn_circle_white"/>
+        android:textSize="18dp"
+        android:textStyle="bold" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/schedual_recyclerview"
         android:layout_width="match_parent"
