--- a/app/src/main/res/layout/activity_quizz.xml
+++ b/app/src/main/res/layout/activity_quizz.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f44242"
+    android:background="@color/startBlue"
     tools:context=".QuizzActivity">
     <TextView
         android:id="@+id/txt_questions"
@@ -42,7 +42,8 @@
         android:layout_marginRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_below="@id/txt_answer"
+        android:layout_marginTop="35dp"
         android:orientation="vertical"
         android:background="@drawable/bg_quizz"
         android:padding="12dp">
@@ -116,9 +117,9 @@
 
     <me.itangqi.waveloadingview.WaveLoadingView
         android:id="@+id/pb_timeCountDown"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginBottom="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="20dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         app:wlv_borderColor="@android:color/white"
@@ -129,5 +130,18 @@
         app:wlv_titleCenterSize="20sp"
         app:wlv_triangle_direction="north"
         app:wlv_waveAmplitude="70"
-        app:wlv_waveColor="@color/startBlue" />
+        app:wlv_waveColor="@color/timelineGreen" />
+    <Button
+        android:id="@+id/btn_exit"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_exit_to_app_black_24dp"
+        android:layout_marginRight="-50dp"
+        android:paddingLeft="10dp"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:textSize="10sp"
+        android:background="@drawable/btn_alert"/>
 </RelativeLayout>
