--- a/app/src/main/res/layout/schedual_content.xml
+++ b/app/src/main/res/layout/schedual_content.xml
@@ -43,12 +43,14 @@
             android:text="Học android"/>
     </LinearLayout>
     <ImageView
+        android:id="@+id/img_delete"
         android:layout_weight="2"
         android:layout_width="0dp"
         android:layout_height="28dp"
         android:layout_gravity="center_vertical"
         android:src="@drawable/ic_failed_black_24dp"/>
     <ImageView
+        android:id="@+id/img_edit"
         android:layout_marginRight="-15dp"
         android:layout_weight="2"
         android:layout_width="0dp"
