--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,6 +20,13 @@
                 android:layout_marginTop="30dp"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/ic_person_outline_black_24dp" />
+            <ImageView
+                android:layout_marginTop="-27dp"
+                android:layout_marginRight="-55dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/ic_edit_black_24dp"/>
             <TextView
                 android:id="@+id/txt_username"
                 android:layout_width="wrap_content"
