--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -13,13 +13,14 @@
         android:id="@+id/img_subject"
         android:src="@drawable/ic_school_black_24dp"
         android:layout_width="36dp"
+        android:layout_gravity="center_vertical"
         android:layout_height="36dp" />
     <LinearLayout
         android:layout_marginLeft="12dp"
         android:layout_marginTop="2dp"
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/txt_subject_name"
@@ -29,6 +30,7 @@
             android:text="Tên môn học"
             android:textSize="14sp" />
         <TextView
+            android:layout_marginTop="8dp"
             android:id="@+id/txt_subject_id"
             android:textColor="@color/colorPrimary1"
             android:layout_width="wrap_content"
