--- a/app/src/main/res/layout/ranking_item.xml
+++ b/app/src/main/res/layout/ranking_item.xml
@@ -35,6 +35,13 @@ android:padding="5dp"
         android:layout_height="wrap_content"
         android:text="Điểm số"
         android:textSize="12sp" />
+    <TextView
+        android:id="@+id/txt_numOfTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:layout_gravity="center_horizontal"
+        android:text="Số lần kiểm tra:"/>
 </LinearLayout>
 
 </LinearLayout>
